# IoT-Network-Simulator

./: .gitignore  LICENSE  README.md  docker-compose.yml  interactive.yml  todo.txt
.vim/: coc-settings.json
cnc/: app.py
cnc/templates/: index.html
data/json/: ddos_tcp_3.json  norm_tcp_3.json  norm_tcp_5.json
data_aggregation/: Dockerfile  app.py  requirements.txt
devices/device_types/src/: lib.rs
devices/garage_door/: Cargo.toml  Dockerfile
devices/lights/: Cargo.toml  Dockerfile  install-packages.sh
devices/motion_sensor/: Cargo.toml  Dockerfile
devices/refridgerator/: Cargo.toml  Dockerfile
devices/smart_home_controller/: Cargo.toml  Dockerfile
devices/smart_home_controller/device_types/src/: lib.rs
devices/smart_home_controller/src/: main.rs
devices/tcp-echo-client/: Cargo.toml  Dockerfile
devices/tcp-echo-server/: Cargo.toml  Dockerfile
devices/thermostat/: Cargo.toml  Dockerfile  install-packages.sh
devices/victim/: Cargo.toml  Dockerfile
devices/weather_sensor/: Cargo.toml  Dockerfile
docker-compose/: collect_ddos_3.yml  collect_ddos_5.yml  collect_norm_3.yml  collect_norm_5.yml  interactive.yml  perf_test_3_sec_int_m_net.yml  perf_test_3_sec_int_s_net.yml  perf_test_5_sec_int_m_net.yml  perf_test_5_sec_int_s_net.yml  performance_testing.yml
router/: Cargo.toml  Dockerfile  Rocket.toml  get_packet_counts.sh  install-packages.sh  set_packet_counts.sh
router/src/: main.rs
tools/: data_collection.py  data_exploration.py  dataset_generator.py  lw_cnn.py  rgba_to_rgb.py
traffic_analysis/: app.py  requirements.txt
(+29 files in other folders)
